// 版本号
syntax = "proto3";

// 指定包名
package proto.video_list;

option go_package = "pb/video_list";

import "proto/user.proto";

  message rpc_feed_request {
   int64 latest_time = 1; // 可选参数，限制返回视频的最新投稿时间戳，精确到秒，不填表示当前时间
   int64  user_id = 2; // 可选参数，登录用户id
   }

  message douyin_feed_response {
     int32 status_code = 1; // 状态码，0-成功，其他值-失败
     string status_msg = 2; // 返回状态描述
     repeated video video_list = 3; // 视频列表
     int64 next_time = 4; // 本次返回的视频中，发布最早的时间，作为下次请求时的latest_time
  }
  
  message video {
     int64 id = 1; // 视频唯一标识
     proto.user.User video_author  = 2; // 视频作者信息
     string play_url = 3; // 视频播放地址
     string cover_url = 4; // 视频封面地址
     int64 favorite_count = 5; // 视频的点赞总数
     int64 comment_count = 6; // 视频的评论总数
     bool is_favorite = 7; // true-已点赞，false-未点赞
     string title = 8; // 视频标题
  }




  service video_list {
    rpc douyin_feed (rpc_feed_request) returns (douyin_feed_response) {
    }
}